--- a/server/package.json
+++ b/server/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "server": "nodemon app.js",
+    "start": "node ./src/app.js",
+    "server": "nodemon ./src/app.js",
     "swagger": "node ./swagger.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.0.0",
-    "debug": "~2.6.9",
     "express": "^4.21.0",
-    "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
-    "mongoose": "^8.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.7",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "debug": "^4.4.0",
+    "nodemon": "^3.1.9"
   }
 }
