--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "swagger": "node ./swagger.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
