--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.1"
