--- a/client/webUI/package.json
+++ b/client/webUI/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^18.2.7",
     "@swimlane/ngx-charts": "^21.1.3",
     "express": "^4.18.2",
+    "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
