--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ MONGO_URI='mongodb+srv://aniketsharma:UxFmcjc3eNBaMWve@cluster0.xv0iu.mongodb.ne
 JWT_SECRET_KEY = "Aniwer32432@#^%&^#!%@&#%&%!@#!&%@#!&@2153"
 
 # CORS Allowed Origins
-CORS_ORIGIN=['http://localhost:4200', 'http://localhost:3000']
+CORS_ORIGIN=['http://localhost:4200','http://localhost:59651' ,'http://localhost:3000']
 
 # # Other Configs
 # API_KEY=your_api_key
